<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/logo"
            android:contentDescription="@string/app_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#0C4280"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_healthsync"
            android:paddingLeft="80dp"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:textColor="#0C4280" />



        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:backgroundTint="#4A90D9"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginBottom="20dp"
            android:text="@string/signup"
            android:textSize="18sp"
            android:textColor="#FFFFFF"
            app:backgroundTint="#4A90D9"
            app:cornerRadius="16dp" />

    </LinearLayout>
</ScrollView>